Fix double scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
 
 html,
 body {
-  max-width: 100vw;
+  width: 100%;
   overflow-x: hidden;
 }
 
@@ -26,6 +26,7 @@ body {
   font-family: var(--font-body), "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-y: auto;
 }
 
 a {
